--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.5",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
