--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.35.3",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "sweetalert": "^2.1.2",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
     "vue-sweetalert2": "^5.0.5",
