--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^3.6.0",
+    "@capacitor/cli": "^3.6.0",
+    "@capacitor/core": "^3.6.0",
     "apexcharts": "^3.35.3",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "pusher-js": "^7.3.0",
     "sweetalert": "^2.1.2",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
