--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvasjs": "^1.8.3",
     "core-js": "^3.8.3",
     "pusher-js": "^7.3.0",
+    "socket.io-client": "^4.5.1",
     "sweetalert": "^2.1.2",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
